test/libsolidity/syntaxTests/scoping/double_variable_declaration_disjoint_scope.sol
contract test {
    function f() pure public {
        { uint x; }
        { uint x; }
    }
}
// ----
// DeclarationError: (77-83): Identifier already declared.
